<resources>
    <string name="app_name">Expiry Tracker</string>
    <string name="bottomwave" />
    <string name="wave1" />
    <string name="logo" />
    <string name="headerwave" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="your_name">Your name</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="email">Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_icon">add icon</string>
    <string name="add_to_inventory">Add to inventory</string>
    <string name="enter_product_name">Product name</string>
    <string name="enter_product_expiry_date">Product expiry date</string>
    <string name="add_item">Add Item</string>

    <string name="API_URL">http://127.0.0.1:8085/api/v1</string>
</resources>